--- a/RHCGapp/public/stylesheets/sections/categorias.css
+++ b/RHCGapp/public/stylesheets/sections/categorias.css
@@ -133,13 +133,15 @@
 	.categorias--desktop{
 		width: 100%;
 		height: 100%;
-		background-color: #8d2e21;
+		background-color: #8d2e21b3;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		padding: 5.5rem 0 11rem 0;
 		border-top: 5px solid #F6EECE;
+		border-bottom: 5px solid #F6EECE;
+		margin-top: 64rem;
 	}
 
 	.categorias--title--desktop{
