--- a/RHCGapp/public/stylesheets/sections/detalleProducto.css
+++ b/RHCGapp/public/stylesheets/sections/detalleProducto.css
@@ -25,6 +25,18 @@
     align-items: center;
     box-shadow: 0px 5px 8px #0b0b0b6e;
 }
+/* .title-main {
+    background: linear-gradient(
+90deg
+, rgba(240,124,77,1) 0%, rgb(113 31 31) 100%);
+    width: 100vw;
+    height: 8vh;
+    display: flex;
+    box-shadow: 0px 5px 8px #0b0b0b6e;
+    border-top: 4px solid #a20a0a;  
+}
+ */
+
 
 .title-main h1{
     margin-left: 25px;
@@ -372,21 +384,83 @@ p.modelo{
 
     @media screen and (min-width: 1200px){
 
+        .product-img img {
+            height: 76vh;
+        }
+
         .container-main{
             height: 280vh;
         }
 
-        .title-main{
-            padding: 12rem 0 5rem 0;
+        /* .title-main{
+            padding: 12rem 0 5rem 0;        original
             display: flex;
             font-size: 2rem;
+        } */
+
+        .container-titles {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
+
+        .title-main {                                                  
+            background: linear-gradient(90deg, rgba(240,124,77,1) 0%, rgb(113 31 31) 100%);
+            width: 80vw;
+            height: 11vh;
+            font-size: 2rem;                                            /* prueba */
+            margin-top: 14rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0px 5px 8px #0b0b0b6e;
+            border: 4px solid rgb(247 222 180);
+            border-radius: 59px;
+           
+        }
+
+        .title-main h1{
+            margin-top: 0px;
+            margin-left:0px;
+            height: 5rem;
+            color: #f6eec9;
+            font-weight: 200;
+        }
+
+        .title-guitar {                                                  
+            background: linear-gradient(90deg, rgba(197,112,74,1) 0%, rgba(246,238,201,1) 100%);
+            width: 80vw;
+            height: 11vh;
+            font-size: 2.5rem;
+            margin-top: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0px 5px 8px #0b0b0b6e;
+            border: 4px solid rgb(247 222 180);
+            border-radius: 59px;
+        }
+
+        .title-guitar h2 {
+            margin-left: 0px;
+            color: #4c0505;
+            font-family: 'lobster';
+            font-size: 4.5rem;
+            font-weight: 200;
+        }
+
+
+
+
+
 
         .price{
             width: 65rem;
             height: 25rem;
-            margin-top: 8rem;
-            margin-bottom: 8rem;
+            margin-top: 12rem;
+            margin-bottom: 4rem;  
+            border: 5px solid #8d2e21;
         }
 
         .price p{
@@ -413,16 +487,40 @@ p.modelo{
             }
 
             .buy a{
-                font-size: 46px,
+                width: 54vw;
+                height: 11vh;
+                font-size: 6rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                box-shadow: 0px 5px 8px #0b0b0b6e;
+                border: 5px solid rgb(247 222 180);
+                border-radius: 59px;
             }
 
             .carrito{
                 height: 74px;
             }
 
+            .carrito a{
+                width: 54vw;
+                height: 11vh;
+                font-size: 6rem;
+                margin-top: 2rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                box-shadow: 0px 5px 8px #0b0b0b6e;
+                border: 5px solid rgb(247 222 180);
+                border-radius: 59px;
+            }
+
             .description-product{
-                width: 65rem;
-                height: 21rem;
+                    width: 65rem;
+                    height: 25rem;
+                    margin-top: 8rem;  
+                    border: 5px solid #8d2e21;
+                }
 
             }
 
@@ -431,27 +529,48 @@ p.modelo{
             }
             .description-product p{
                 font-size: 30px;
+                font-family: 'Lobster';
+                font-weight: 200;
+                line-height: 1.5;
             }
 
+            .container-title-payment-method {
+                margin-top: -4rem;
+            }
+            
+            
+
             .title-payment-method{
-                margin-top: 75px;
-                margin-bottom: 50px;
+                background: linear-gradient(90deg, rgba(240,124,77,1) 0%, rgb(113 31 31) 100%);
+                width: 80vw;
+                height: 11vh;
+                font-size: 2rem;
+                margin-top: 6rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                box-shadow: 0px 5px 8px #0b0b0b6e;
+                border: 4px solid rgb(247 222 180);
+                border-radius: 59px;
             }
 
             .title-payment-method h3{
-                height: 60px;
-                font-size: 37px;
+                font-size: 4.5rem;
+                color: rgb(247 222 180);
             }
 
             .payment-method-main  {
                 width: 65rem;
                 height: 32rem;
+                border: 5px solid #8d2e21;
             } 
 
             .payment-method-main p{
                 font-size: 30px;
                 height: 53px;
                 width: 44rem;
+                display: flex;
+                align-items: center;
             }
-    }
+
 }
