--- a/RHCGapp/public/stylesheets/sections/produCategorias.css
+++ b/RHCGapp/public/stylesheets/sections/produCategorias.css
@@ -77,7 +77,7 @@
     border-radius: .3rem;
     box-shadow: var(--primary-shadow-down);
     color: var(--color-primary-yellow);
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     font-family: lobster;
     text-transform: capitalize;
     width: 100%;
@@ -127,8 +127,7 @@
 @media screen and (min-width: 1200px){
 
     .container-products{
-        padding: 20rem 0 0;
-        margin-bottom: 4rem
+        margin-top: 8rem;
     }
 
     .productos-item{
