--- a/RHCGapp/views/detalleProducto.ejs
+++ b/RHCGapp/views/detalleProducto.ejs
@@ -53,8 +53,7 @@
                     </div>
                     <div class="carrito">
                         <a href="#">Añadir al carrito</a>
-                    </div>
-                    
+                    </div>      
                 </div>
             
                 <div class='container-description'>
@@ -84,11 +83,14 @@
                     <h3>Medios de pago</h3>
                 </div>
                 <div class="payment-method-main">
-                    <P class="deb">tarjeta de debito</P>
-                    <P class="cred">tarjeta de credito</P>
-                    <P class="mp">mercado pago</P>
-                    <P class="pg">pago facil</P>
-                    <P>rapipago</P>
+                    <div class="caja">
+                        <P class="deb">tarjeta de debito</P>
+                        <P class="cred">tarjeta de credito</P>
+                        <P class="mp">mercado pago</P>
+                        <P class="pg">pago facil</P>
+                        <P class="rp">rapipago</P>
+                    </div>
+                    
                 </div>
             </div>
             
