--- a/RHCGapp/public/stylesheets/forms/carrito.css
+++ b/RHCGapp/public/stylesheets/forms/carrito.css
@@ -298,6 +298,7 @@
 		display: inline-block;
 		font-size: 2.5rem;
 		color: var(--color-primary-yellow);
+		font-weight: unset;
 	}
 
 	.carrito-mobile .carrito-content {
