--- a/RHCGapp/public/stylesheets/sections/detalleProducto.css
+++ b/RHCGapp/public/stylesheets/sections/detalleProducto.css
@@ -40,10 +40,11 @@
 
 .title-main h1{
     margin-left: 25px;
-    color: #4c0505;
+    color: rgb(247 222 180);
     height: 32px;
-    margin-top: 10px;
     font-family: 'lobster';
+    font-size: 3.5rem;
+    font-weight: 200;
 }
 
 .title-guitar{
@@ -51,6 +52,7 @@
     width: 100vw;
     padding-top: 3px;
     height: 7vh;
+    font-size: 3rem;
     display: flex;
     align-items: center;
     padding: 4rem 0;
@@ -82,10 +84,10 @@
 .price{
     background-image: linear-gradient(157deg, rgba(251,185,130,1) 0%, rgba(247,222,180,1) 60%);
     border-radius: 34px;
-    width: 19rem;
     height: 18rem;
     margin: 0;
-    
+    width: 95%;
+    border: 4px solid #a20a0a;
     margin-bottom: 25px;
     display: flex;
     flex-direction: column;
@@ -96,27 +98,21 @@
 
 
 .price p{
+    width: 80%;
     display: flex;
     justify-content: center;
-    font-size: 33px;
-    font-family: "Arimo", "Lobster";
-    margin: 0;
-    color:  #4c0505;
-    font-weight: bolder;
-}
-
-.price, .modelo{
-    font-size: 25px;
+    font-size: 4rem;
+    font-family: "Lobster";
+    color: #4c0505;
+    font-size: 4rem;
 }
 
 .precionum{
     border-bottom: 4px solid #4c0505;
-    width: 135px;
 }
 
 p.marca{
-    padding: 0px 22px;
-    font-size: 26px;
+    font-size: 4rem;
     border-bottom: 4px solid #4c0505;
 }
 .precio, .marca{
@@ -127,7 +123,7 @@ p.marca{
 }
 
 p.modelo{
-    font-size: 27px;
+    font-size: 4rem;
 }
 
 .buttons-product{
@@ -135,27 +131,30 @@ p.modelo{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 15px 27px;
-    font-size: 25px;
+    font-size: 3rem;
+    align-items: center;
    
 }
 
 
 .buy{
+    background-color: #799351;
     display: flex;
     justify-content: center;
     height: 55px;
-}
-
-.buy a{
-    background-color: #799351;
-    width: 100%;
+    width: 70%;
+    border: 4px solid rgb(247 222 180);
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 11px;
+    border-radius: 1.5rem;
     box-shadow: 0px 5px 8px #0b0b0b6e;
     text-decoration: none;
+}
+
+.buy a{
+    
+    
     font-family: 'lobster';
     color: white;
 }
@@ -163,22 +162,24 @@ p.modelo{
 
 
 .carrito{
+    background-color: #4c0505;
     display: flex;
     justify-content: center;
     color: #f6eec9;
     height: 55px;
-    margin-top: 11px
-}
-
-.carrito a{
-    background-color: #4c0505;
-    width: 100%;
+    margin-top: 11px;
+    width: 70%;
+    border: 4px solid;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 11px;
+    border-radius: 1.5rem;
     box-shadow: 0px 5px 8px #0b0b0b6e;
     text-decoration: none;
+}
+
+.carrito a{
+    
     font-family: 'lobster';
     color: white;
 }
@@ -195,36 +196,38 @@ p.modelo{
 }
 
 .description-product{
-    background-image: linear-gradient(157deg, rgba(251,185,130,1) 0%, rgba(247,222,180,1) 60%);
+    background-image: linear-gradient(
+157deg
+, rgba(251,185,130,1) 0%, rgba(247,222,180,1) 60%);
     border-radius: 34px;
-    width: 19rem;
     margin: 0;
     margin-top: 32px;
     display: flex;
     flex-direction: column;
     flex-direction: flex;
     align-items: center;
-    font-family: 'Arimo';
+    font-family: 'Lobster';
     box-shadow: 0px 5px 8px #0b0b0b6e;
     color: #4c0505;
-    font-weight: bold;
+    width: 95%;
+    border: 4px solid #a20a0a;
 }
 
 
 .description-product p{
     margin: 0;
-    font-weight: bold;
+    font-weight: 200;
     margin: 4px 6px;
     margin-bottom: 25px;
     font-size: 18px;
     text-align: center;
-    line-height: 1.2;
+    line-height: 1.8;
 }
 
 .title-description{
     margin-top: 11px;
-    font-size: 29px;
-    font-weight: bold;
+    font-size: 4rem;
+    font-weight: 200;
 }
 
 
@@ -240,55 +243,76 @@ p.modelo{
 .title-payment-method{
     background: rgb(210,128,90);
     background-image: linear-gradient(114deg, rgba(210,128,90,0.8519782913165266) 46%, rgba(76,5,5,0.8883928571428571) 100%);
-    /* background: linear-gradient(90deg, rgba(240,124,77,1) 0%, rgba(93,48,48,1) 100%); */
-    margin: 40px 0px;
-    width: 100%;
+    margin: 5rem 0;    
+    width: 95%;
+    border: 4px solid rgb(247 222 180);
+    border-radius: 1.5rem;
 }
+
 .title-payment-method h3{
     margin: 0;
     height: 44px;
     display: flex;
     align-items: center;
     font-size: 22px;
-    color: #4c0505;
+    color: rgb(246 238 201);
     font-weight: unset;
     font-family: 'lobster';
     margin-left: 20px;
 }
 
+
+
 .payment-method-main{
     
-    background-image: linear-gradient(157deg, rgba(251,185,130,1) 0%, rgba(247,222,180,1) 60%);
-   
+    background-image: linear-gradient(
+        157deg
+        , rgba(251,185,130,1) 0%, rgba(247,222,180,1) 60%);
     border-radius: 34px;
-    width: 19rem;
     height: 23rem;
-    padding: 21px 0px;
     display: flex;
     flex-direction: column;
     flex-direction: flex;
     align-items: center;
-    font-family: 'Arimo';
+    justify-content: center;
+    font-family: 'Lobster';
     box-shadow: 0px 5px 8px #0b0b0b6e;
     color: #4c0505;
+    width: 95%;;
+    border: 4px solid #a20a0a;
     font-weight: bold;
 
 }
 
+.payment-method-main .caja {
+    width: 60%;
+    font-weight: 100;
+}
+
+.payment-method-main .caja {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
+}
+
 .payment-method-main p{
-    margin: 2px 14px;
-    font-size: 18px;
+    font-size: 2.5rem;
+    line-height: 3.7rem;
     text-align: center;
     display: flex;
     justify-content: center;
-    height: 36px;
-}
-
-.deb, .cred, .mp, .pg{
     border-bottom: 4px solid #4c0505;
-    width: 150px;
+    width: 80%;
 
 }
+
+.rp{
+    border-bottom: none !important
+}
+
 
 @media screen and (min-width: 425px){
 
@@ -306,28 +330,31 @@ p.modelo{
         align-items: center;
     }
 
-    .price{
+
+    .price p {
         width: 23rem;
     }
-
     .precionum{
-        width: 170px; 
+        width: 40vw; 
     }
 
-    p.marca{
-        width: 170px;
-    }
-
-    .description-product{
+    p.marca {
         width: 23rem;
     }
 
-    .payment-method-main{
-        width: 23rem;
+    .title-payment-method{
+        width: 95%;
+    }
+
+    .title-payment-method h3{
+        height: 6rem;
+        font-size: 3rem;
+        
     }
 
     .payment-method-main p{
         font-size: 20px;
+        font-weight: 100;
     }
 
     .deb, .cred, .mp, .pg {
@@ -335,13 +362,7 @@ p.modelo{
     }
 
     }
-    
 
-    @media screen and (min-width: 690px){
-        .price {
-        width: 28rem;
-        }
-    }
 
 
     @media screen and (min-width: 768px) {
@@ -351,18 +372,23 @@ p.modelo{
         }
 
         .product-img {
-            height: 65vh;
+            height: 55vh;
+        }
+        .price {
+            width: 50rem;
+            height: 18rem;
+            border: 4px solid #a20a0a;
+            color: #4c0505;
         }
 
-        .price {
-            width: 25rem;
-            height: 20rem;
 
+        .carrito a{
+            margin-top: 0
         }
 
         .description-product {
-            width: 26rem;
-            height: 23rem;
+            width: 50rem;
+            border: 4px solid #a20a0a;
         }
 
         .description-product p{
@@ -371,21 +397,42 @@ p.modelo{
         }
 
         .title-description{
-            font-size: 33px;
+            font-size: 5rem;
+            font-family: 'Lobster';
+            font-weight: 200;
+            margin-top: 0;
         }
 
-        .payment-method-main{
-            width: 25rem;
-        
 
+        .container-title-payment-method {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 41vh;
+            margin-top: 3rem;
+        }
+
+        .title-payment-method h3 {
+            font-size: 3.5rem;
+            color: rgb(247 222 180);
+            margin-left: 0;
+        }
+        .payment-method-main{
+            width: 50rem ;
+            height: 23rem ;
+        
     }
         
 
-
     @media screen and (min-width: 1200px){
 
+        .product-img {
+            height: 62vh;
+        }
+
         .product-img img {
-            height: 76vh;
+            height: 59vh;
         }
 
         .container-main{
@@ -407,7 +454,7 @@ p.modelo{
 
         .title-main {                                                  
             background: linear-gradient(90deg, rgba(240,124,77,1) 0%, rgb(113 31 31) 100%);
-            width: 80vw;
+            width: 100vw;
             height: 11vh;
             font-size: 2rem;                                            /* prueba */
             margin-top: 14rem;
@@ -416,8 +463,7 @@ p.modelo{
             justify-content: center;
             box-shadow: 0px 5px 8px #0b0b0b6e;
             border: 4px solid rgb(247 222 180);
-            border-radius: 59px;
-           
+            border-radius:1.3rem;          
         }
 
         .title-main h1{
@@ -430,7 +476,7 @@ p.modelo{
 
         .title-guitar {                                                  
             background: linear-gradient(90deg, rgba(197,112,74,1) 0%, rgba(246,238,201,1) 100%);
-            width: 80vw;
+            width: 100vw;
             height: 11vh;
             font-size: 2.5rem;
             margin-top: 1rem;
@@ -439,7 +485,7 @@ p.modelo{
             justify-content: center;
             box-shadow: 0px 5px 8px #0b0b0b6e;
             border: 4px solid rgb(247 222 180);
-            border-radius: 59px;
+            border-radius: 1.3rem;
         }
 
         .title-guitar h2 {
@@ -468,11 +514,11 @@ p.modelo{
         }
 
             .precionum{
-                width: 44rem;
+                width: 70%;
             }
 
             p.marca{
-                width: 44rem;
+                width: 70%;
                 font-size: 44px;
             }
 
@@ -483,37 +529,22 @@ p.modelo{
                 font-size: 46px;
             }
             .buy{
-                height: 74px;
-            }
-
-            .buy a{
                 width: 54vw;
                 height: 11vh;
                 font-size: 6rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                box-shadow: 0px 5px 8px #0b0b0b6e;
-                border: 5px solid rgb(247 222 180);
+                border: 5px solid white;
                 border-radius: 59px;
             }
 
             .carrito{
-                height: 74px;
-            }
-
-            .carrito a{
                 width: 54vw;
                 height: 11vh;
                 font-size: 6rem;
-                margin-top: 2rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                box-shadow: 0px 5px 8px #0b0b0b6e;
-                border: 5px solid rgb(247 222 180);
+                margin-top: 3rem;
                 border-radius: 59px;
             }
+
+            
 
             .description-product{
                     width: 65rem;
@@ -525,10 +556,10 @@ p.modelo{
             }
 
             .title-description{
-                font-size: 43px;
+                font-size: 6rem;
             }
             .description-product p{
-                font-size: 30px;
+                font-size: 3rem;
                 font-family: 'Lobster';
                 font-weight: 200;
                 line-height: 1.5;
@@ -542,16 +573,16 @@ p.modelo{
 
             .title-payment-method{
                 background: linear-gradient(90deg, rgba(240,124,77,1) 0%, rgb(113 31 31) 100%);
-                width: 80vw;
+                width: 100vw;
                 height: 11vh;
                 font-size: 2rem;
-                margin-top: 6rem;
+                margin-top: 20rem;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 box-shadow: 0px 5px 8px #0b0b0b6e;
                 border: 4px solid rgb(247 222 180);
-                border-radius: 59px;
+                border-radius: 1.5rem;
             }
 
             .title-payment-method h3{
@@ -560,14 +591,13 @@ p.modelo{
             }
 
             .payment-method-main  {
-                width: 65rem;
-                height: 32rem;
                 border: 5px solid #8d2e21;
+                width: 65rem;
             } 
 
             .payment-method-main p{
                 font-size: 30px;
-                height: 53px;
+                height: 100%;
                 width: 44rem;
                 display: flex;
                 align-items: center;
